--- a/WD Content/Base.lproj/Main.storyboard
+++ b/WD Content/Base.lproj/Main.storyboard
@@ -76,36 +76,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ug6-j7-u9P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="886" y="149"/>
-        </scene>
-        <!--Content-->
-        <scene sceneID="wuE-Gz-SVb">
-            <objects>
-                <tableViewController id="7ai-TB-hQT" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Rvi-PI-hEt">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ja0-PP-oWn">
-                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ja0-PP-oWn" id="nD6-wp-dEV">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="7ai-TB-hQT" id="Z6H-LD-QUs"/>
-                            <outlet property="delegate" destination="7ai-TB-hQT" id="8K3-ro-8Es"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Content" id="ttb-Lk-FaC"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nJB-rO-q5g" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2498" y="518"/>
+            <point key="canvasLocation" x="885" y="148.94366197183098"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="EJh-mi-5Va">
@@ -117,7 +88,7 @@
                         <color key="barTintColor" red="0.0" green="0.4431372549" blue="0.64705882349999999" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="7ai-TB-hQT" kind="relationship" relationship="rootViewController" id="BKv-Cl-sD1"/>
+                        <segue destination="CXs-WW-86W" kind="relationship" relationship="rootViewController" id="cK9-pK-3sn"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2nS-W1-0uU" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -187,6 +158,90 @@
                 <exit id="dWA-h9-nmU" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1733" y="-193"/>
+        </scene>
+        <!--Content Controller-->
+        <scene sceneID="zoa-gg-Ils">
+            <objects>
+                <viewController storyboardIdentifier="CollectionViewController" extendedLayoutIncludesOpaqueBars="YES" useStoryboardIdentifierAsRestorationIdentifier="YES" id="CXs-WW-86W" customClass="ContentController" customModule="WD_Content" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SWT-Hy-kth"/>
+                        <viewControllerLayoutGuide type="bottom" id="c3J-6E-NYu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bWa-H3-Uke">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="NBS-Es-yBg">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="b8f-ZX-M5n">
+                                    <size key="itemSize" width="160" height="160"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="my_cell" id="H3j-hr-aJl" customClass="ContentCell" customModule="WD_Content" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="10" width="160" height="180"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="160" height="180"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qZF-rP-Fcl">
+                                                    <rect key="frame" x="30" y="0.0" width="100" height="120"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="4jC-O7-sKg"/>
+                                                        <constraint firstAttribute="height" constant="120" id="jFK-hW-1xJ"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WDTVLiveHub" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YDe-5g-Uf4">
+                                                    <rect key="frame" x="10" y="120" width="140" height="60"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="qZF-rP-Fcl" firstAttribute="top" secondItem="H3j-hr-aJl" secondAttribute="top" id="DVv-JQ-Ce1"/>
+                                            <constraint firstItem="YDe-5g-Uf4" firstAttribute="centerX" secondItem="H3j-hr-aJl" secondAttribute="centerX" id="OQA-Vf-EbF"/>
+                                            <constraint firstAttribute="centerX" secondItem="qZF-rP-Fcl" secondAttribute="centerX" id="WbF-t9-QWg"/>
+                                            <constraint firstAttribute="bottom" secondItem="YDe-5g-Uf4" secondAttribute="bottom" id="Wbk-uy-upK"/>
+                                            <constraint firstItem="YDe-5g-Uf4" firstAttribute="leading" secondItem="H3j-hr-aJl" secondAttribute="leading" constant="10" id="ewC-F1-btY"/>
+                                            <constraint firstItem="YDe-5g-Uf4" firstAttribute="top" secondItem="qZF-rP-Fcl" secondAttribute="bottom" id="pFr-Ny-VjC"/>
+                                            <constraint firstAttribute="trailing" secondItem="YDe-5g-Uf4" secondAttribute="trailing" constant="10" id="sPL-jI-Ta4"/>
+                                        </constraints>
+                                        <size key="customSize" width="160" height="180"/>
+                                        <connections>
+                                            <outlet property="nodeImage" destination="qZF-rP-Fcl" id="ZhI-tu-Vul"/>
+                                            <outlet property="nodeName" destination="YDe-5g-Uf4" id="7UE-vm-J2y"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="CXs-WW-86W" id="Mg8-YB-lwY"/>
+                                    <outlet property="delegate" destination="CXs-WW-86W" id="tG2-qP-AgR"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="NBS-Es-yBg" firstAttribute="top" secondItem="SWT-Hy-kth" secondAttribute="bottom" id="9cR-Uo-qcr"/>
+                            <constraint firstItem="c3J-6E-NYu" firstAttribute="top" secondItem="NBS-Es-yBg" secondAttribute="bottom" id="FDS-XA-DUM"/>
+                            <constraint firstAttribute="trailing" secondItem="NBS-Es-yBg" secondAttribute="trailing" id="avu-t7-8yy"/>
+                            <constraint firstItem="NBS-Es-yBg" firstAttribute="leading" secondItem="bWa-H3-Uke" secondAttribute="leading" id="f5Y-88-jez"/>
+                        </constraints>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <navigationItem key="navigationItem" id="UAC-Yl-wEn"/>
+                    <connections>
+                        <outlet property="collectionView" destination="NBS-Es-yBg" id="NwO-ho-rYe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ahK-55-ZAR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2498" y="518"/>
         </scene>
     </scenes>
     <resources>
