--- a/WD Content/Base.lproj/LaunchScreen.storyboard
+++ b/WD Content/Base.lproj/LaunchScreen.storyboard
@@ -21,27 +21,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="UT1-yy-DPO">
-                                <rect key="frame" x="40" y="164" width="240" height="240"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="240" id="KhH-9G-l1Q"/>
-                                    <constraint firstAttribute="width" constant="240" id="zPW-rE-2Bp"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="UT1-yy-DPO">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.92156862745098034" green="0.88235294117647056" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="UT1-yy-DPO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="NIx-rH-lb5"/>
-                            <constraint firstItem="UT1-yy-DPO" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="cIy-GM-Ian"/>
+                            <constraint firstItem="UT1-yy-DPO" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="AOE-bC-KfR"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="UT1-yy-DPO" secondAttribute="bottom" id="GaL-86-p5W"/>
+                            <constraint firstItem="UT1-yy-DPO" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="VLH-RL-21M"/>
+                            <constraint firstAttribute="trailing" secondItem="UT1-yy-DPO" secondAttribute="trailing" id="nf7-Ro-LOC"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.5" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="logo.png" width="320" height="320"/>
+        <image name="logo" width="400" height="240"/>
     </resources>
 </document>
